unpackaged/main/default/objects/VRTS_Master__c/VRTS_Master__c.object-meta.xml
<CustomObject>
    <label>VRTS Master</label>
    <nameField>
        <displayFormat>VRTSM-{00000}</displayFormat>
        <label>VRTS Master Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VRTS Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>