unpackaged/main/default/objects/VRTS_Master__c/fields/Category_Ar__c.field-meta.xml
<CustomField>
    <fullName>Category_Ar__c</fullName>
    <label>Category Ar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>صفارات الإنذار الداخلية</fullName>
            </value>
            <value>
                <fullName>جهاز مستشعر الحركة داخل الحافلة</fullName>
            </value>
            <value>
                <fullName>زر تفقد الحافلة بعد انتهاء الرحلة</fullName>
            </value>
            <value>
                <fullName>زر الطوارئ</fullName>
            </value>
            <value>
                <fullName>جهاز قياس درجة الحرارة - الرطوبة</fullName>
            </value>
            <value>
                <fullName>الشاشة الرئيسية أمام السائق</fullName>
            </value>
            <value>
                <fullName>الكاميرات الخارجية عدد(4)</fullName>
            </value>
            <value>
                <fullName>(3) الكاميرات الداخلية عدد</fullName>
            </value>
            <value>
                <fullName>جهاز التخزين الرئيسي</fullName>
            </value>
            <value>
                <fullName>جهاز مثبت سرعة الحافلة</fullName>
            </value>
            <value>
                <fullName>ذراع التوقف</fullName>
            </value>
            <value>
                <fullName>اللوحة الالكترونية لخط السير</fullName>
            </value>
            <value>
                <fullName>طفايات الحريق عدد(2) 6KG</fullName>
            </value>
            <value>
                <fullName>مطرقة طوارئ لكسر زجاج مخرج الطوارئ</fullName>
            </value>
            <value>
                <fullName>حقيبة إسعافات أولية</fullName>
            </value>
            <value>
                <fullName>نظام الاطفاء الذاتي لمحرك جميع الحافلات ما عدا حافلات</fullName>
            </value>
            <value>
                <fullName>أداة قطع الأحزمة في حالة الطوارئ</fullName>
            </value>
            <value>
                <fullName>نظام الاطفاء الذاتي لمحرك حافلات   (SUNWIN)</fullName>
            </value>
            <value>
                <fullName>نظام الاطفاء الذاتي لمحرك حافلات (Except SUNWIN)</fullName>
            </value>
            <value>
                <fullName>اتصالات الكابلات</fullName>
            </value>
            <value>
                <fullName>الجهاز الثاني</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>