unpackaged/main/default/objects/VRTS_Master__c/fields/Category_En__c.field-meta.xml
<CustomField>
    <fullName>Category_En__c</fullName>
    <label>Category En</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Siren (Speaker)</fullName>
            </value>
            <value>
                <fullName>Child Detection Sensor</fullName>
            </value>
            <value>
                <fullName>Child Check Button</fullName>
            </value>
            <value>
                <fullName>Panic Button</fullName>
            </value>
            <value>
                <fullName>Temp. - Humidity</fullName>
            </value>
            <value>
                <fullName>LCD Monitor</fullName>
            </value>
            <value>
                <fullName>4 Pcs External IP Camera</fullName>
            </value>
            <value>
                <fullName>3 Pcs Internal IP Camera</fullName>
            </value>
            <value>
                <fullName>MDVR With HDD 2TB</fullName>
            </value>
            <value>
                <fullName>Bus Speed Limiter</fullName>
            </value>
            <value>
                <fullName>Stop Arm</fullName>
            </value>
            <value>
                <fullName>Electronic Destination Board</fullName>
            </value>
            <value>
                <fullName>Fire Extinguisher 6KG×2</fullName>
            </value>
            <value>
                <fullName>Emergency exit hammer</fullName>
            </value>
            <value>
                <fullName>First Aid Bag</fullName>
            </value>
            <value>
                <fullName>Automatic Fire Suppression System</fullName>
            </value>
            <value>
                <fullName>tool Cutting seat belts In case of emergency</fullName>
            </value>
            <value>
                <fullName>Automatic Fire Suppression (SUNWIN)</fullName>
            </value>
            <value>
                <fullName>Automatic Fire Suppression (Except SUNWIN)</fullName>
            </value>
            <value>
                <fullName>Cable Connections</fullName>
            </value>
            <value>
                <fullName>Second Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>