unpackaged/main/default/objects/VRTS_Master__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>