unpackaged/main/default/objects/VRTS_Master__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version</label>
    <length>225</length>
    <type>Text</type>
</CustomField>